# modern-opengl-samples

./: CMakeLists.txt  README.md
Texture/: main.c
Transform/: main.c
glDrawArrays/: main.c
glDrawElements/: main.c
glsl/: pass.frag  pass.vert  texture.frag  texture.vert  transform.vert
